[workspace]
resolver = "3"
members = ["mkutils", "mkutils-macros"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Utility methods, traits, and types."
readme = "README.md"
repository = "https://github.com/mkxl/mkutils-rs"
license = "Apache-2.0"
keywords = ["utilities"]
categories = ["development-tools"]

[workspace.lints.clippy]
all = "deny"
cargo = "deny"
nursery = "deny"
pedantic = "deny"
multiple_crate_versions = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
