[workspace]
resolver = "3"
members = ["mkutils", "mkutils-macros"]

[workspace.package]
version = "0.1.33"
edition = "2024"
description = "Utility methods, traits, and types."
readme = "README.md"
repository = "https://github.com/mkxl/mkutils-rs"
license = "Apache-2.0"
keywords = ["utilities"]
categories = ["development-tools"]

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
cargo = "deny"
nursery = "deny"
pedantic = "deny"
future_not_send = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
module_inception = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }

[patch.crates-io]
crossterm = { git = 'https://github.com/crossterm-rs/crossterm', rev = "4f08595" }
